<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Pactera. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ THIS CODE IS PROVIDED AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS
  ~ OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
  ~ ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A
  ~ PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
  ~
  ~ See the Apache License, Version 2.0 for the specific language
  ~ governing permissions and limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:padding="16dp">


	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/userName"
					style="@android:style/TextAppearance.Medium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end|center_vertical"
					android:gravity="end"
					android:textStyle="bold"
					tools:text="@string/user_name"/>

				<ImageView
					android:id="@+id/emotion_icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start|center_vertical"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:contentDescription="@string/detail_emotion_desc"
					android:src="@mipmap/happy_icon"/>
			</FrameLayout>

			<TextView
				style="@android:style/TextAppearance.Medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="8dp"
				android:paddingTop="8dp"
				android:text="@string/hear_more"
				android:textStyle="bold"/>

			<TextView
				style="@android:style/TextAppearance.Medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="8dp"
				android:text="@string/workload"/>

			<SeekBar
				android:id="@+id/seek_work_overload"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:longClickable="false"
				android:max="10"/>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start"
					android:text="@string/label_bad"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:text="@string/label_good"/>
			</FrameLayout>

			<TextView
				style="@android:style/TextAppearance.Medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="8dp"
				android:paddingTop="8dp"
				android:text="@string/hear_more"/>

			<SeekBar
				android:id="@+id/seek_hear_more"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:max="10"/>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start"
					android:text="@string/label_bad"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:text="@string/label_good"/>
			</FrameLayout>

			<TextView
				style="@android:style/TextAppearance.Medium"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="8dp"
				android:paddingTop="8dp"
				android:text="@string/feedback"/>

			<SeekBar
				android:id="@+id/seek_project_feedback"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:max="10"/>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start"
					android:text="@string/label_bad"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:text="@string/label_good"/>
			</FrameLayout>

		</LinearLayout>

	</ScrollView>

	<Button
		android:id="@+id/btnSubmit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:minHeight="40dp"
		android:text="@string/btntxt_submit"
		tools:background="@android:color/holo_orange_light"
		tools:textColor="@android:color/holo_red_light"/>

</LinearLayout>